Handle string templates
https://github.com/google/turbine/issues/303

PiperOrigin-RevId: 602458900